# Water.IT

./: .gitignore  CMakeLists.txt  README.md  cstuff.txt  env.sh  hello_world.c  lwipopts.h  main.c  main.cpp
content/: index.shtml
testserver/: go.mod  serve.go
